5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4172/executions/1582_1332.log
== TEST (2019-03-12 17:46:35) 
-- CODE:
aresta =print(round(3/2 3*5**2) )
area = 
 
print(round(area, 4))
-- ERROR:
File "XXXX", line 1
    aresta =print(round(3/2 3*5**2) )
                            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 20:53:13) 
-- CODE:
aresta =print(round 3/2√3*5**2,4)
area = 
 
print(round(area, 4))
-- ERROR:
File "XXXX", line 1
    aresta =print(round 3/2√3*5**2,4)
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 20:54:02) 
-- CODE:
aresta =print(round (3/2√3*5**2,4))
area = 
 
print(round(area, 4))
-- ERROR:
File "XXXX", line 1
    aresta =print(round (3/2√3*5**2,4))
                             ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 20:55:01) 
-- CODE:
aresta =print(round (3/2(3)**5**2,4))
area = 
 
print(round(area, 4))
-- ERROR:
File "XXXX", line 2
    area = 
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 20:56:37) 
-- CODE:
aresta =print(round (3/2 (3)**5**2,4))
area = 
 
print(round(area, 4))
-- ERROR:
File "XXXX", line 2
    area = 
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 21:21:29) 
-- CODE:
aresta =
area = 
 
print(round(area3/2 (3)**0.5*5**2, 4))
-- ERROR:
File "XXXX", line 1
    aresta =
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 21:21:40) 
-- CODE:
aresta =
area = 
 
print(round(area3/2 (3)**0.5*5**2, 4))
-- ERROR:
File "XXXX", line 1
    aresta =
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 21:16:24) 
-- CODE:
aresta =print(5)
area = print(5*6)
 
print(round()
-- ERROR:
File "XXXX", line 5
    
                 ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 21:16:37) 
-- CODE:
aresta =print(5)
area = print(5*6)
 
print(round()
-- ERROR:
File "XXXX", line 5
    
                 ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 21:38:11) 
-- CODE:
aresta =
area = print(round(3/2((3)**0.5)*5**2,4)
 
print(round()
-- ERROR:
File "XXXX", line 1
    aresta =
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 21:38:55) 
-- CODE:
aresta =
area = print(round(3/2((3)**0.5)*5**2,4))
 
print(round()
-- ERROR:
File "XXXX", line 1
    aresta =
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 21:39:19) 
-- CODE:
aresta =
area = print(round(3/2((3)**0.5)5**2,4))
 
print(round()
-- ERROR:
File "XXXX", line 1
    aresta =
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 21:41:48) 
-- CODE:
aresta =
area = print(round(3/2√3*5**2)
 
print(round()
-- ERROR:
File "XXXX", line 1
    aresta =
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 21:42:00) 
-- CODE:
aresta =
area = print(round(3/2√3*5**2,4))
 
print(round()
-- ERROR:
File "XXXX", line 1
    aresta =
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 22:48:38) 
-- CODE:

area = print(round(3/2√3*5**2,4))
 
print(round()
-- ERROR:
File "XXXX", line 2
    area = print(round(3/2√3*5**2,4))
                           ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 22:49:41) 
-- CODE:

area = print(round((3/2)((3)**0.5)5**2,4))
 
print(round()
-- ERROR:
File "XXXX", line 2
    area = print(round((3/2)((3)**0.5)5**2,4))
                                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 22:50:31) 
-- CODE:

area = print(round((3/2)(3)**0.5(5**2),4))
 
print(round()
-- ERROR:
File "XXXX", line 5
    
                 ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 22:52:20) 
-- CODE:

area = print(round((3/2)(3)**0.5(5**2),4))
 

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = print(round((3/2)(3)**0.5(5**2),4))
TypeError: 'float' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 22:52:59) 
-- CODE:

area = print(round((3/2)(3)**0.33(5**2),4))
 

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = print(round((3/2)(3)**0.33(5**2),4))
TypeError: 'float' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 22:53:13) 
-- CODE:

area = print(round((3/2)(3)**0.33(5**2),4))
 

-- EXECUTION TIME:
0.199348
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1582/1332/main.py", line 2, in <module>
    area = print(round((3/2)(3)**0.33(5**2),4))
TypeError: 'float' object is not callable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 22:53:40) 
-- CODE:

area = print(round(3/2(3)**0.33(5**2),4))
 

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = print(round(3/2(3)**0.33(5**2),4))
TypeError: 'int' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 22:54:13) 
-- CODE:

area = print(int(round(3/2(3)**0.33(5**2),4)))
 

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = print(int(round(3/2(3)**0.33(5**2),4)))
TypeError: 'int' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 22:56:37) 
-- CODE:

print(round(3/2*15))
 

-- OUTPUT:
22
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 22:56:49) 
-- CODE:

print(round(3/2*15,4))
 

-- OUTPUT:
22.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 22:57:16) 
-- CODE:

print(round(3/2*15,4))
 

-- OUTPUT:
22.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 22:57:21) 
-- CODE:

print(round(3/2*15,4))
 

-- EXECUTION TIME:
0.151443
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
22.5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 22:57:43) 
-- CODE:

print(round(1.5*15,4))
 

-- OUTPUT:
22.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 22:59:05) 
-- CODE:

print(round(1.5*(75)**0.05,4))
 

-- OUTPUT:
1.8614
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 22:59:56) 
-- CODE:

print(round(1.5*(75)**0.05,4))
 

-- OUTPUT:
1.8614
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 23:01:45) 
-- CODE:
print(round(1.5*(75)**0.5,4))
 

-- OUTPUT:
12.9904
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 23:02:34) 
-- CODE:
print(round(1.5*(75)**0.5,4))
 

-- EXECUTION TIME:
0.158798
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
12.9904
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 23:02:47) 
-- CODE:
print(round(3/2*(75)**0.5,4))
 

-- OUTPUT:
12.9904
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 23:03:20) 
-- CODE:
print(round(3/2*(3)**0.5*5**2,4))
 

-- OUTPUT:
64.9519
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 23:03:28) 
-- CODE:
print(round(3/2*(3)**0.5*5**2,4))
 

-- EXECUTION TIME:
0.193944
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
64.9519
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 16:43:49) 
-- CODE:
print(round(3/2*(3)**0.5*5**2,4))
 

-- EXECUTION TIME:
0.163785
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
64.9519
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 12:37:22) 
-- CODE:

 from math import*
	a=5
print(round(3/2*sqrt(3)*(a)**2))

-- ERROR:
File "XXXX", line 2
    from math import*
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 12:37:36) 
-- CODE:
from math import*
a=5
print(round(3/2*(sqrt(3))*(a)**2))

-- OUTPUT:
65
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 12:37:56) 
-- CODE:
from math import*
a=5
print(round(3/2*(sqrt(3))*(a)**2,4))

-- OUTPUT:
64.9519
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 12:38:01) 
-- CODE:
from math import*
a=5
print(round(3/2*(sqrt(3))*(a)**2,4))

-- EXECUTION TIME:
0.171151
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
64.9519
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
